examples/test/testpolicy13944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13944
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key38: value6
      key21: value40
      key32: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value4
      podSelector:
        matchLabels:
          key0: value31
